# efm8-template

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: arm-gcc.cmake  flash.in  jlink.cmake  linkerscript.ld  post-build.cmake
source/: HELLO.C
